concord_macros/tests/dsl/fail/fail_cache_max_body_invalid_unit.stderr
error: expected cache size unit after max_body; expected bytes, kb, kib, mb, mib, gb, or gib
 --> tests/dsl/fail/fail_cache_max_body_invalid_unit.rs:8:25
  |
8 |             max_body 10 bananas
  |                         ^^^^^^^
